# go-git

./: .dockerignore  .gitattributes  .gitignore  .golangci.yaml  .renovaterc.json5  .shellcheckrc  .travis.yml  AGENTS.md  AI_POLICY.md  BUILD.bazel  COMPATIBILITY.md  CONTRIBUTING.md  EXTENDING.md  HISTORY.md  Makefile  README.md  WORKSPACE  appveyor.yml  archive.go  archive_test.go  bench_blob_read_test.go  blame.go  blame_test.go  blobs.go  blobs_test.go  branch.go  branch_config_test.go  client.go  clone_bench_test.go  commit.go  commit_test.go  commit_walker.go  commit_walker_test.go  common.go  common_test.go  crypto.go  deps.bzl  doc.go  example_test.go  file.go  (+108 more)
cli/go-git/: BUILD.bazel  clone.go  go.mod  go.sum  main.go  receive_pack.go  update_server_info.go  upload_pack.go  version.go
config/: BUILD.bazel  branch.go  branch_test.go  config.go  config_test.go  credential.go  filter.go  modules.go  modules_test.go  optbool.go  optbool_test.go  protocolpolicy.go  protocolpolicy_test.go  refspec.go  refspec_test.go  url.go  url_test.go
internal/revision/: BUILD.bazel  main_test.go  parser.go  parser_test.go  scanner.go  scanner_test.go
internal/url/: BUILD.bazel  main_test.go  url.go  url_test.go
plumbing/: BUILD.bazel  error.go  hash.go  hash256.go  hash_test.go  hasher.go  hasher_test.go  immutable.go  immutable_test.go  main_test.go  memory.go  memory_test.go  object.go  object_test.go  objectid.go  objectid_test.go  reference.go  reference_test.go  refspec.go  refspec_test.go  tag.go
plumbing/cache/: BUILD.bazel  buffer_lru.go  buffer_test.go  common.go  main_test.go  object.go  object_lru.go  object_test.go
plumbing/client/: client.go  client_test.go  common.go  common_test.go  example_test.go  main_test.go  policy_test.go  withsshconfig_test.go
plumbing/color/: BUILD.bazel  color.go
plumbing/compat/: fetch_import.go  fetch_import_test.go  mapping.go  mapping_file.go  mapping_file_atomic_test.go  mapping_file_test.go  mapping_memory.go  mapping_memory_test.go  objects.go  objects_test.go  push_export.go  push_export_test.go  translate.go  translate_parity_test.go  translate_test.go
plumbing/difftree/: change.go  change_adaptor.go  change_adaptor_test.go  change_test.go  difftree.go  difftree_test.go  treenoder.go
plumbing/ewah/: bitmap.go  bitmap_test.go  ewah_io.go
plumbing/filemode/: BUILD.bazel  filemode.go  filemode_test.go  main_test.go
plumbing/hash/: BUILD.bazel  hash.go  hash_sha1.go  hash_sha256.go  hash_test.go  hash_zero.go  main_test.go  new.go  new_test.go  object.go  sort.go
plumbing/hasher/: hasher.go  hasher_test.go  immutable.go  immutable_test.go
plumbing/http/: http.go  writer.go
plumbing/object/: BUILD.bazel  blob.go  blob_test.go  change.go  change_adaptor.go  change_adaptor_test.go  change_test.go  commit.go  commit_diff.go  commit_scanner.go  commit_sha256_test.go  commit_stats_test.go  commit_test.go  commit_walker.go  commit_walker_bfs.go  commit_walker_bfs_filtered.go  commit_walker_bfs_filtered_test.go  commit_walker_ctime.go  commit_walker_file.go  commit_walker_limit.go  commit_walker_path.go  commit_walker_test.go  commitnode.go  commitnode_graph.go  commitnode_object.go  commitnode_test.go  commitnode_walker_ctime.go  decode_fuzz_test.go  difftree.go  difftree_test.go  file.go  file_test.go  main_test.go  merge_base.go  merge_base_test.go  object.go  object_options.go  object_test.go  patch.go  patch_stats_test.go  (+17 more)
plumbing/protocol/: version.go
plumbing/revlist/: BUILD.bazel  diff.go  diff_test.go  main_test.go  object_walk.go  revlist.go  revlist_test.go  stream.go  stream_test.go
plumbing/server/: common.go  loader.go  loader_test.go  receive_pack.go  receive_pack_test.go  serve.go  server.go  server_test.go  upload_pack.go  upload_pack_test.go
plumbing/serverinfo/: serverinfo.go  serverinfo_test.go
plumbing/sign/: ssh.go  ssh_test.go
plumbing/storer/: BUILD.bazel  index.go  main_test.go  object.go  object_test.go  pack_stream.go  pack_stream_test.go  reference.go  reference_test.go  reflog.go  shallow.go  storer.go  storer_test.go
plumbing/transport/: BUILD.bazel  archive.go  build_update_requests_test.go  common.go  common_test.go  conn.go  doc.go  error.go  errors.go  fetch.go  fetch_pack.go  fetch_pack_test.go  loader.go  loader_test.go  main_test.go  mocks.go  negotiate.go  negotiate_test.go  negotiate_v2.go  pack.go  pack_session.go  pack_session_test.go  pack_stream.go  pack_stream_test.go  pack_test.go  policy.go  policy_test.go  protocol.go  push.go  receive_pack.go  receive_pack_test.go  registry.go  registry_example_test.go  registry_test.go  request.go  send_pack_test.go  serve.go  serve_test.go  serverinfo.go  serverinfo_test.go  (+26 more)
storage/filesystem/: BUILD.bazel  config.go  config_test.go  delta_cache.go  delta_chain.go  deltaobject.go  fsobject_packhandle_test.go  index.go  index_test.go  indexcache.go  main_test.go  module.go  multipack_fixture_test.go  object.go  object_bench_test.go  object_iter.go  object_iter_test.go  object_race_test.go  object_test.go  pack_entry.go  pack_index.go  packhandle_integration_test.go  reference.go  reflog.go  reflog_test.go  reftable_reference.go  reftable_reflog.go  reftable_test.go  shallow.go  storage.go  storage_internal_test.go  storage_leakcheck.go  storage_noleakcheck.go  storage_pool_test.go  storage_test.go
storage/memory/: BUILD.bazel  main_test.go  object.go  object_test.go  options.go  storage.go  storage_internal_test.go  storage_test.go
storage/test/: BUILD.bazel  storage_suite.go
storage/transactional/: BUILD.bazel  config.go  config_test.go  index.go  index_test.go  main_test.go  module.go  object.go  object_test.go  reference.go  reference_test.go  reflog.go  reflog_test.go  shallow.go  shallow_test.go  storage.go  storage_leakcheck.go  storage_noleakcheck.go  storage_test.go
utils/binary/: BUILD.bazel  main_test.go  read.go  read_test.go  varint.go  varint_test.go  write.go  write_test.go  writer_test.go
utils/diff/: BUILD.bazel  diff.go  diff_ext_test.go
utils/ioutil/: BUILD.bazel  common.go  common_test.go  context.go  (+3 more)
(+1047 files in other folders)
