load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "revision",
    srcs = [
        "parser.go",
        "scanner.go",
        "token.go",
    ],
    importpath = "github.com/sgnl-ai/go-git/internal/revision",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "revision_test",
    srcs = [
        "parser_test.go",
        "scanner_test.go",
    ],
    embed = [":revision"],
    deps = ["@in_gopkg_check_v1//:check_v1"],
)
