load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "object",
    srcs = [
        "blob.go",
        "change.go",
        "change_adaptor.go",
        "commit.go",
        "commit_walker.go",
        "commit_walker_bfs.go",
        "commit_walker_bfs_filtered.go",
        "commit_walker_ctime.go",
        "commit_walker_limit.go",
        "commit_walker_path.go",
        "difftree.go",
        "file.go",
        "merge_base.go",
        "object.go",
        "patch.go",
        "rename.go",
        "signature.go",
        "tag.go",
        "tree.go",
        "treenoder.go",
    ],
    importpath = "github.com/sgnl-ai/go-git/plumbing/object",
    visibility = ["//visibility:public"],
    deps = [
        "//plumbing",
        "//plumbing/filemode",
        "//plumbing/format/diff",
        "//plumbing/storer",
        "//storage",
        "//utils/binary",
        "//utils/diff",
        "//utils/ioutil",
        "//utils/merkletrie",
        "//utils/merkletrie/noder",
        "//utils/sync",
        "@com_github_emirpasic_gods//trees/binaryheap",
        "@com_github_protonmail_go_crypto//openpgp",
        "@com_github_sergi_go_diff//diffmatchpatch",
    ],
)

go_test(
    name = "object_test",
    srcs = [
        "blob_test.go",
        "change_adaptor_test.go",
        "change_test.go",
        "commit_stats_test.go",
        "commit_test.go",
        "commit_walker_bfs_filtered_test.go",
        "commit_walker_test.go",
        "difftree_test.go",
        "file_test.go",
        "merge_base_test.go",
        "object_test.go",
        "patch_test.go",
        "rename_test.go",
        "signature_test.go",
        "tag_test.go",
        "tree_test.go",
    ],
    embed = [":object"],
    deps = [
        "//:go-git",
        "//plumbing",
        "//plumbing/cache",
        "//plumbing/filemode",
        "//plumbing/format/diff",
        "//plumbing/format/packfile",
        "//plumbing/storer",
        "//storage/filesystem",
        "//storage/memory",
        "//utils/merkletrie",
        "//utils/merkletrie/noder",
        "@com_github_go_git_go_billy_v5//memfs",
        "@com_github_go_git_go_billy_v5//util",
        "@com_github_go_git_go_git_fixtures_v4//:go-git-fixtures",
        "@in_gopkg_check_v1//:check_v1",
    ],
)
