load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "transport",
    srcs = ["common.go"],
    importpath = "github.com/sgnl-ai/go-git/plumbing/transport",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/url",
        "//plumbing",
        "//plumbing/protocol/packp",
        "//plumbing/protocol/packp/capability",
    ],
)

go_test(
    name = "transport_test",
    srcs = ["common_test.go"],
    embed = [":transport"],
    deps = [
        "//plumbing/protocol/packp/capability",
        "@in_gopkg_check_v1//:check_v1",
    ],
)
