load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ioutil",
    srcs = [
        "common.go",
        "pipe.go",
        "pipe_js.go",
    ],
    importpath = "github.com/sgnl-ai/go-git/utils/ioutil",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jbenet_go_context//io",
    ] + select({
        "@io_bazel_rules_go//go/platform:js": [
            "@com_github_acomagu_bufpipe//:bufpipe",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "ioutil_test",
    srcs = ["common_test.go"],
    embed = [":ioutil"],
    deps = ["@in_gopkg_check_v1//:check_v1"],
)
