load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "objfile",
    srcs = [
        "doc.go",
        "reader.go",
        "writer.go",
    ],
    importpath = "github.com/sgnl-ai/go-git/plumbing/format/objfile",
    visibility = ["//visibility:public"],
    deps = [
        "//plumbing",
        "//plumbing/format/packfile",
        "//utils/sync",
    ],
)

go_test(
    name = "objfile_test",
    srcs = [
        "common_test.go",
        "reader_test.go",
        "writer_test.go",
    ],
    embed = [":objfile"],
    deps = [
        "//plumbing",
        "@in_gopkg_check_v1//:check_v1",
    ],
)
